# wasmtime

crates/wasi-nn/: Cargo.toml
crates/wasi-nn/src/backend/: llama_cpp.rs  mod.rs
crates/wasi-nn/tests/: minillama.gguf
