[package]
name = "wasmtime-wasi-nn"
version.workspace = true
authors.workspace = true
description = "Wasmtime implementation of the wasi-nn API"
documentation = "https://docs.rs/wasmtime-wasi-nn"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm", "computer-vision"]
keywords = ["webassembly", "wasm", "neural-network"]
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
edition.workspace = true

[lints]
workspace = true

[dependencies]
# These dependencies are necessary for the WITX-generation macros to work:
anyhow = { workspace = true }
wiggle = { workspace = true, features = ["wasmtime"] }

# This dependency is necessary for the WIT-generation macros to work:
wasmtime = { workspace = true, features = ["component-model", "runtime"] }

# These dependencies are necessary for the wasi-nn implementation:
tracing = { workspace = true }
thiserror = { workspace = true }
openvino = { version = "0.6.0", features = [
    "runtime-linking",
], optional = true }

ort = { version = "2.0.0-rc.0", default-features = false, features = ["copy-dylibs", "download-binaries"], optional = true }

llm-chain = { git ="https://github.com/danbev/llm-chain.git", branch="wasmtime-backend-updates", optional = true }
llm-chain-llama = { git ="https://github.com/danbev/llm-chain.git", branch="wasmtime-backend-updates",optional = true }
serde_json = { version = "1.0.64", optional = true }
tokio = { version = "1.28.0", features = ["rt-multi-thread"], optional = true }
backtrace = { version = "0.3", optional = true }

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
    "AI_MachineLearning",
    "Storage_Streams",
    "Foundation_Collections",
]
optional = true


[build-dependencies]
walkdir = { workspace = true }

[dev-dependencies]
cap-std = { workspace = true }
test-programs-artifacts = { workspace = true }
wasi-common = { workspace = true, features = ["sync"] }
wasmtime = { workspace = true, features = ["cranelift"] }

[features]
default = ["openvino"]
# openvino is available on all platforms, it requires openvino installed.
openvino = ["dep:openvino"]
# onnx is available on all platforms.
onnx = ["dep:ort"]
# winml is only available on Windows 10 1809 and later.
winml = ["dep:windows"]
llama_cpp = ["llm-chain-llama", "llm-chain", "serde_json", "tokio", "backtrace"]
